update package & readme

--- a/webplayer-example-vanilla-js/public/index.html
+++ b/webplayer-example-vanilla-js/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>client/child</title>
     <script src="app.js" type="module"></script>
+    <script src="https://unpkg.com/@corellium/corellium-webplayer@1.0.10/dist/index.global.js"></script>
 
     <style>
       .hide {
