CORE-1920: replace deviceId & change name

--- a/webplayer-example-vanilla-js/public/index.html
+++ b/webplayer-example-vanilla-js/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>client/child</title>
     <script src="app.js" type="module"></script>
-    <script src="https://unpkg.com/@corellium/corellium-webplayer@1.0.10/dist/index.global.js"></script>
+    <script src="https://unpkg.com/@corellium/corellium-webplayer@1.0.12/dist/index.global.js"></script>
 
     <style>
       .hide {
@@ -15,7 +15,7 @@
     </style>
   </head>
   <body>
-    <h2>Corellium Web Player Demo - VanillaJs</h2>
+    <h2>Corellium Webplayer Demo - VanillaJs</h2>
     <div id="container">
       <div id="corellium-loading">
         <h1>Loading...</h1>
